fix(get-first): troca o metodo de linkedlist por um de list